@@ -23,10 +23,9 @@ function putScoreBoard($myteamid = null, $isjury = FALSE) {
 
 	global $DB;
 
-	$cid = getCurContest();
-	if ( ! $cid ) { echo "<p><em>No contests defined</em></p>\n"; return; }
-	
-	$contdata = $DB->q('TUPLE SELECT * FROM contest WHERE cid = %i', $cid);
+	$contdata = getCurContest(TRUE);
+	if ( empty( $contdata ) ) { echo "<p><em>No contests defined</em></p>\n"; return; }
+	$cid = $contdata['cid'];
 	
 	// page heading with contestname and start/endtimes
 	echo "<h1>Scoreboard " . htmlentities($contdata['contestname']) . "</h1>\n\n";
