@@ -8,7 +8,9 @@ Version 0.3.2 - CVS
  - Fixed bugs where submitdaemon couldn't handle spaces in language ext.
  - Added balloons notification script (Closes: #1238416).
  - Added feature: jury can do optional or required auditing of judgings
-   (Closes: #1070240)
+   (Closes: #1070240).
+ - Accept late submissions, but do not judge them (Closes: #1238421).
+ - Improve efficiency of requesting contest data.
 
 Version 0.3.1 - 16 July 2005
 ----------------------------
